compilers/ID/cool/regression/BASE_semanttest/simple_type_incorrect.cl.stderr
./BASE_semanttest/simple_type_incorrect.cl:2: Inferred return type String of method main does not conform to declared return type Int.
Compilation halted due to static semantic errors.
