compilers/ID/cool/regression/BASE_semanttest/simple_type_incorrect.cl
class Main is
	main(): Int is "3" end;
end;
